Fixed slider images not fitting whole container

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,3 +82,7 @@ h1 {
     background-color: rgba(255, 255, 255, 0.1) !important;
 
 }
+
+.p-galleria-content {       // Hace que las imagenes del slider del home se ajusten al tamaño de la pagina
+    width: 100%;
+}
